shifted to apache pekko

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
-akka {
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
+pekko {
+  loggers = ["org.apache.pekko.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  logging-filter = "org.apache.pekko.event.slf4j.Slf4jLoggingFilter"
 
   http {
     server {
@@ -13,7 +13,7 @@ akka {
     provider = "cluster"
 
     serialization-bindings {
-      "com.knoldus.credibility.SerializableMessage" = jackson-cbor
+      "com.nashtech.credibility.SerializableMessage" = jackson-cbor
     }
   }
 
@@ -29,11 +29,11 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka://Credibility@127.0.0.1:2551",
-      "akka://Credibility@127.0.0.1:2552"
+      "pekko://Credibility@127.0.0.1:2551",
+      "pekko://Credibility@127.0.0.1:2552"
     ]
 
-    downing-provider-class = "com.swissborg.lithium.DowningProviderImpl"
+    downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
   }
 
   management {
